Initial project upload

--- a/index.html
+++ b/index.html
@@ -1,124 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LLM Evaluation Project | Himangi Maurya</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #222;
-        }
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-            background: white;
-            margin-top: 30px;
-            border-radius: 8px;
-            box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
-        }
-        h2 {
-            color: #2c3e50;
-        }
-        .code-box {
-            background: #eee;
-            padding: 15px;
-            border-radius: 5px;
-            font-family: monospace;
-        }
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 15px;
-            background: #2c3e50;
-            color: white;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>LLM Evaluation Project</title>
 </head>
-
 <body>
-
-<header>
     <h1>LLM Evaluation Project</h1>
-    <p>By Himangi Maurya</p>
-</header>
+    <p>This is my project where I evaluate a Large Language Model using Python.</p>
 
-<div class="container">
-
-    <h2>📌 Overview</h2>
-    <p>
-        This project is a simple evaluation pipeline created to assess how well a Large Language Model (LLM) responds
-        to a given user query. It analyzes the model’s answer for relevance, completeness, hallucination, and latency.
-        This project was built as part of an internship assignment.
-    </p>
-
-    <h2>⚙️ Features</h2>
+    <h2>Project Files</h2>
     <ul>
-        <li>Relevance scoring using embeddings and cosine similarity</li>
-        <li>Completeness check based on keyword coverage</li>
-        <li>Hallucination detection</li>
-        <li>Latency calculation using timestamps</li>
-        <li>Detailed JSON reports</li>
+        <li><a href="report.json">Report 1 (JSON)</a></li>
+        <li><a href="report2.json">Report 2 (JSON)</a></li>
+        <li><a href="report3.json">Report 3 (JSON)</a></li>
+        <li><a href="report4.json">Report 4 (JSON)</a></li>
     </ul>
 
-    <h2>📁 Project Structure</h2>
-    <pre class="code-box">
-EVALUATION/
-│
-├── main.py
-├── evaluator.py
-├── utils.py
-├── sample_inputs/
-├── reports/
-├── README.md
-└── final_summary.md
-    </pre>
-
-    <h2>▶️ How to Run</h2>
-    <pre class="code-box">
-python main.py --chat sample_inputs/chat.json --context sample_inputs/context.json --out report.json
-    </pre>
-
-    <h2>📊 Example Output</h2>
-    <p>A JSON report is generated with scores like:</p>
-    <pre class="code-box">
-{
-  "relevance": 0.87,
-  "completeness": 0.92,
-  "hallucination": 0.10,
-  "latency": 4.25
-}
-    </pre>
-
-    <h2>🔗 GitHub Repository</h2>
-    <p>
-        <a href="https://github.com/Himangimaurya/llm-evaluation-project" target="_blank">
-            View the full project on GitHub
-        </a>
+    <p>GitHub Repo: 
+       <a href="https://github.com/Himangimaurya/llm-evaluation-project">
+       https://github.com/Himangimaurya/llm-evaluation-project
+       </a>
     </p>
-
-</div>
-
-<footer>
-    © 2025 Himangi Maurya — LLM Evaluation Project
-</footer>
-
 </body>
 </html>
